# nnrj

./: BP.md  BP_en.md  BP_fr.md  README.md  apk.ps1  go.ps1  ideas.md  main.py  newnrj.db  pyproject.toml  requirements.txt  tree.txt
controllers/: app_controller.py  habit_controller.py  settings_controller.py
i18n/: de.json  en.json  es.json  fr.json
services/: db_service.py  habit_service.py
src/: apk.ps1  go.ps1  main.py
src/gc7_tools/: screen_utils.py  tree_pretty.py
src/nnrj/: __init__.py
src/nnrj/controllers/: app_controller.py  habit_controller.py  settings_controller.py
src/nnrj/i18n/: en.json
src/nnrj/models/: habit.py
src/nnrj/pages/: la_une.py
src/nnrj/services/: db_service.py  habit_service.py  i18n_service.py
src/nnrj/views/: habit_create_view.py  habit_list_view.py  habit_view.py  settings_view.Py
src/pages/: la_une.py
src/scripts/: Countdown.py  app.py
src/tools/: home_ui.py
tools/: gc7.py
views/: habit_checkin_view.py  habit_create_view.py  habit_history_view.py  habit_list_view.py  habit_view.py  onboarding_view.py  settings_view.Py
