
[project]
name = "sport"
version = "0.0.2"
description = "Sport Timer"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Aadminli", email = "GrCOTE7@gmail.com" }]
dependencies = [
    "flet",
    "matplotlib>=3.10.8",
    "pymox_kit",
]

[project.optional-dependencies]
dev = ["flet[all]"]


[tool.flet]
org = "com.mycompany"
product = "Sport"
company = "COTE"
copyright = "Copyright (C) 2026 by GrCOTE7"
compile.app = true
compile.packages = true
compile.cleanup = true
build_number = 1

[tool.flet.app]
path = "src"


[tool.flet.android]
split_per_abi = true
min_sdk_version = 24
target_sdk_version = 35


[tool.flet.splash]
android = false


# [tool.flet.android.permission]
# "android.permission.CAMERA" = true

# [tool.flet.android.feature] # --android-features
# "android.hardware.camera" = true
